          in simulate mode to "proceed" all actions, not only Release-related
          ones.
    - Config:
      - Added 'apt::acquire::translation' configuration option.
    - Cache:
      - BinaryVersion:
        - Implemented localized descriptions support.
      - New method 'get_download_entries_of_localized_descriptions'.

 -- Eugene V. Lyubimkin <jackyf.devel@gmail.com>  Wed, 15 Jul 2009 13:20:55 +0300

cupt (0.3.3) unstable; urgency=medium

  * Cupt:
    - Cache:
      - Relation:
        - The '>' and '<' compatibility operators now work as really expected.
          Thanks to Ryan Niebur for report. The urgency is set to medium
          because of this fix.
    - Config:
      - [Ryan Niebur] Support APT_CONFIG environment variable.
    - System:
      - State:
        - [Ryan Niebur] Parsing status file: if grep found nothing in the
          file, this is not an error.

 -- Eugene V. Lyubimkin <jackyf.devel@gmail.com>  Mon, 13 Jul 2009 20:34:02 +0300

cupt (0.3.2) unstable; urgency=low

  * cupt:
    - 'search':
      - Fixed searching in installed packages.
    - 'rdepends':
      - Output also a version of reverse-depending packages.
      - Consider all available versions, not only policy one.
    - 'depends':
      - Consider all available versions, not only policy one.
    - 'source', 'showsrc', 'build-dep':
      - Implemented binary-to-source mapping as second-chance try if supplied
        source package doesn't exist. Thanks to Steve Cotton.
    - 'source':
      - Verify hash sums for .dsc files too.
  * Cupt:
    - Cache:
      - BinaryVersion:
        - Require only one hash sum to be specified.
      - SourceVersion:
        - Require only one hash sum to be specified for each of part.
      - Package:
        - Emit a warning when throwing away duplicating version with
          non-matched hash sums.
        - Introduce 'o_binary_architecture' flag to filter out versions with
          unwanted binary architectures.